# stock-analysis-app

./: app.py  pyproject.toml  replit.md
tabs/: __init__.py  ipo_tab.py  news_tab.py  optimizer_tab.py  portfolio_tab.py  screener_tab.py
utils/: data_fetcher.py  ipo_analyzer.py  news_analyzer.py  portfolio_analyzer.py  portfolio_optimizer.py  stock_screener.py
