[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alpha-vantage>=3.0.0",
    "beautifulsoup4>=4.13.5",
    "diskcache>=5.6.3",
    "feedparser>=6.0.12",
    "jugaad-data>=0.22",
    "nsepython>=2.97",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "streamlit>=1.49.1",
    "tabs>=0.7.0",
    "trafilatura>=2.0.0",
    "vadersentiment>=3.3.2",
    "yfinance>=0.2.66",
]
